syntax = "proto3";

package user;
option go_package="./user";
import public "google/protobuf/timestamp.proto";

message Empty {}
message UserCreateRequest {
  string username = 1;
  string password = 2;
  string avatar = 3;
  string phone = 4;
  uint64 id = 5;
}
message UserCreateResponse {
  uint64 id = 1;
  string username = 2;
  string avatar = 3;
}

message UserLoginRequest {
  string username = 1;
  string password = 2;
}
message UserLoginResponse {
  uint64 id = 1;
  string username = 2;
  string avatar = 3;
}

message UserInfoRequest {
  uint64 userId = 1;
  uint64 friendId = 2;
}
message UserInfoResponse {
  uint64 id = 1;
  string username = 2;
  string avatar = 3;
  uint64  age = 4;
  uint64 gender = 5;
  string address = 6;
  string phone = 7;
  string signature = 8;
  bool isFriend = 9;
  string remark = 10;
}

message UserUpdateInfoRequest {
  uint64 id = 1;
  string username = 2;
  string password = 3;
  string avatar = 4;
  uint64 age = 5;
  uint64 gender = 6;
  string address = 7;
  string phone = 8;
  string signature = 9;
}

message UserAddRequest {
  uint64 id = 1;
  uint64 beId = 2;
  string message = 3;
  uint32 type = 4;
  string remark = 5;
}

message UserUpdateRemarkRequest {
  uint64 id = 1;
  uint64 beId = 2;
  string remark = 3;
}

message UserCreateGroupRequest {
  uint64 group_boss_id = 1;
  string name = 2;
  string avatar = 3;
  uint64 system_tag_id = 4;
  uint64 user_self_tag_id = 5;
}

message UserSelectGroupsRequest{
  //根据标签查看群聊
  repeated uint64 system_tag_id = 1;
  repeated uint64 user_self_tag_id = 2;
  //分页数据
  uint64 page_no = 5;
  uint64 page_size = 6;
}

message GroupInformation {
  uint64 id = 1;//群id
  string name = 3; //群聊名称
  string system_tag_name = 4 ; //群聊所属的系统标签名称
  string user_self_tag_name = 5 ; //群聊所属的用户自定义标签名称
  string avatar = 6; //群聊头像
}

message DisposeFlowedRequest {
  uint64 from =1;
  uint64 to = 2;
  uint32 type = 3;
  string remark = 4;
  bool result = 5;
}

message UserSelectGroupsResponse{
  repeated GroupInformation groupList = 1;
  uint64 total = 2; //总条数
}

//查看群详情
message DetailGroupRequest {
  uint64 id = 1 ;//群id
}

message DetailGroupResponse {
  uint64 id = 1;//群id
  uint64 count = 2 ; //群聊人数
  string name = 3; //群聊名称
  string system_tag_name = 4 ; //群聊所属的系统标签名称
  string user_self_tag_name = 5 ; //群聊所属的用户自定义标签名称
  string avatar = 6; //群聊头像
  google.protobuf.Timestamp created_at = 7; //群创建时间
  float man = 8; //男生所占比例
  float woman = 9; //女生所占比例
  string address = 10 ; //群聊中地区最多的地址
}

message NextUserIDResponse {
  uint64 next_user_id = 1 ; //新的主键值
}

message UserFriendRequest {
  uint64 id = 1;
}

message UserFriendResponse {
 repeated UserFriend list = 1;
}

message UserFriend {
  uint64 id = 1;
  string username = 2;
  string remark = 3;
  string avatar = 4;
  string signature = 5;
  repeated string tag_name = 6;
}

message GroupChat {
  
}

message UserSelfGroupRequest{
  //查询和自己相关的群聊 1.自己加入的群聊 2.自己创建的群聊
  uint64 page_now = 1;
  uint64 page_size = 2;
  uint64 user_id = 3 ;
}


//推荐人员 或者 根据标签查询人员信息
message RecommendUsersRequest{
  uint64 user_id = 1 ; //用户id, 防止将自己查询出来
  int64 page_no = 2; //当前页
  int64 page_size = 3 ; //每页显示条数
  repeated uint64 system_tag_id = 4; //系统标签
  repeated uint64 user_self_tag_id = 5 ; //用户自定义标签
}

message RecommendUser{
  uint64 id = 1 ; //用户id
  string username = 2 ; //用户名
  string avatar = 3;//用户头像
  string signature = 4 ; //个性签名
}

message RecommendUsersResponse {
  repeated RecommendUser recommendUserList = 1; //人员列表
  int64 total = 2; //总数
}
//推荐人员 或者 根据标签查询人员信息

message UserQueryFriendRequest{
  uint64 userId = 1;
  string param = 2; // 可能为用户名、备注
}

message UserQueryPhoneRequest{
  string phone = 1;
}

message UserQueryPhoneResponse{
  uint64 Id = 1;
  string username = 2;
  string avatar = 3;
  string address = 4;
  string signature = 5;
  repeated string tag_name = 6;
}

message UserDeleteFriendRequest {
  uint64 user_id = 1;
  uint64 friend_id = 2;
}


message GetOffsetRequest{
  uint64 user_id = 1;
}

message GetOffsetResponse{
  uint64 offset = 1;
}

message SetOffsetRequest{
  uint64 user_id = 1;
  uint64 offset = 2;
}


service UserService {
  rpc UserCreate(UserCreateRequest) returns(UserCreateResponse);
  rpc UserCreateRevertLogin(UserCreateRequest) returns (UserCreateResponse);
  rpc UserIsExists(UserCreateRequest) returns (Empty);

  rpc UserLogin(UserLoginRequest) returns(UserLoginResponse); // 登录
  rpc UserInfo(UserInfoRequest) returns(UserInfoResponse);  // 获取用户信息
  rpc UserUpdateInfo(UserUpdateInfoRequest) returns(Empty); // 修改用户信息

  // 好友
  rpc UserFlowed(UserAddRequest) returns(Empty);  // 添加好友/群聊
  rpc UserDisposeFlowed(DisposeFlowedRequest) returns(Empty); // 处理好友/群聊申请
  rpc UserUpdateRemark(UserUpdateRemarkRequest) returns(Empty); // 修改备注


  rpc RecommendUsers(RecommendUsersRequest) returns (RecommendUsersResponse); //推荐人员列表
  rpc UserFriendList(UserFriendRequest) returns(UserFriendResponse); // 获取好友列表
  rpc UserQueryFriend(UserQueryFriendRequest)returns(UserFriendResponse); // 在好友列表中搜索
  rpc UserQueryPhone(UserQueryPhoneRequest)returns(UserQueryPhoneResponse); // 通过手机号搜索（包括陌生人）
  rpc UserDeleteFriend(UserDeleteFriendRequest)returns(Empty); // 用户删除好友


  // 偏移量
  rpc GetOffset(GetOffsetRequest)returns(GetOffsetResponse);
  rpc SetOffset(SetOffsetRequest)returns(Empty);



  //redis自增id
  rpc NextUserID(Empty) returns (NextUserIDResponse); //查询id
  rpc AddUserId(Empty) returns (Empty);//生成id
  rpc DecUserID(Empty) returns (Empty);//id减少1

  //群聊
  rpc UserCreateGroup(UserCreateGroupRequest) returns(Empty); //创建群聊
  rpc UserSelectGroup(UserSelectGroupsRequest) returns (UserSelectGroupsResponse) ; //首页根据标签推荐群聊
  rpc UserUserSelfGroup(UserSelfGroupRequest) returns(UserSelectGroupsResponse) ; //查询和自己相关的群聊
  rpc UserSelectDetailGroup(DetailGroupRequest) returns (DetailGroupResponse) ; //查询群聊详情
}


// goctl rpc protoc user.proto --go_out=. --go-grpc_out=. --zrpc_out=.